--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm ci && cd backend && npm run build", 
-    "start": "cd backend && npm start" 
+    "build": "tsc", 
+    "start": "node ./dist/index.js" 
   },
   "keywords": [],
   "author": "",
