--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc", 
-    "start": "node ./dist/index.js" 
+        "dev": "npm install && tsc",
+        "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
