--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",                               
     "module": "commonjs",                               
     "rootDir": "./src",                                 
+    "outDir": "./dist",                                 
     "esModuleInterop": true,                        
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                    
